--- a/app/views/requests/new_genre_search.html.erb
+++ b/app/views/requests/new_genre_search.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag :show_genre_search do %>
+<%= form_tag :show_genre_search, :class => :"form-horizontal" do %>
     <fieldset>
       <legend>Find Movies by Genre Percentage</legend>
 
