--- a/app/views/requests/new_last_movies.html.erb
+++ b/app/views/requests/new_last_movies.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag :show_last_movies do %>
+<%= form_tag :show_last_movies, :class => :"form-horizontal" do %>
     <fieldset>
       <legend>New Last Movies Search</legend>
 
