--- a/app/views/actors/index.html.erb
+++ b/app/views/actors/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Actors</h1>
+<h1><%= controller_name == "requests" ? Involve.find(params[:actor][:involve]).name.pluralize : "Actors" %></h1>
 <table class="table table-striped">
   <thead>
     <tr>
