--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,8 @@
             <% end %>
             <ul class="dropdown-menu">
               <li><%= link_to "Last movies", new_last_movies_path %></li>
-              <li><%= link_to "Find by genre", new_genre_search_path %></li>
+              <li><%= link_to "Find movies by genre percentage", new_genre_search_path %></li>
+              <li><%= link_to "Find actors by type of involvement", new_involve_search_path %></li>
             </ul>
           </li>
         </ul>
