--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="#">VideoLibrary</a>
+      <a class="brand" href="<%= root_path %>">VideoLibrary</a>
       <div class="nav-collapse">
         <ul class="nav">
           <li><%= link_to "Movies",    :movies %></li>
